--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socialhub",
-  "homepage": "https://it-hoko.github.io/ithoko/",
+  "homepage": "https://it-hoko.github.io/socialhub/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
